--- a/mn.features.org
+++ b/mn.features.org
@@ -1,6 +1,6 @@
 #+title: minneron features
 
-* TODO [1/14] general purpose traditional text editor
+* TODO [3/14] general purpose traditional text editor
 ** DONE [6/6] #ED001 get ln.pas hooked up to cedit.
 :PROPERTIES:
 :TS: <2013-01-03 01:38PM>
@@ -181,11 +181,12 @@ test case:
     chk.that( cur.index = 3, 'cursor index didn''t update after insertion' );
     chk.equal( cur.index, 3 );
 
-** TODO [0/0] #ED003 save the updated file to disk
+** DONE [0/0] #ED003 save the updated file to disk
 :PROPERTIES:
 :TS: <2013-01-03 01:40PM>
 :ID: nfe6rz719zf0
 :END:
+
 ** TODO [0/0] #ED004 word wrap / virtual line mode
 :PROPERTIES:
 :TS: <2013-01-03 01:41PM>
