--- a/README.org
+++ b/README.org
@@ -49,7 +49,6 @@ Your life will be much easier if you fork or clone this repository with =git= ra
 Once you have git installed, you can get the minneron source code by issuing the following command:
 
 : git clone git@github.com:minneron/minneron.git
-
 ** =make=
 
 =make= is a common tool to help automate the process of compiling independent files.
@@ -57,6 +56,14 @@ Once you have git installed, you can get the minneron source code by issuing the
 If you are running a unix-like operating system, you probably already have =make= installed, or can obtain it through your system's package manager.
 
 On windows platforms, it is included with free pascal, and is also available via [[http://www.cygwin.com/][cygwin]].
+
+** Temporary requirement: =emacs= + =org-mode= (for the time being)
+
+These are required to extract the source code segments from the =*.org= files and tangle them back into pascal code. Emacs 24 ships with org-mode. If your emacs is older, see http://orgmode.org/
+
+Note: You don't need to interact with emacs or org-mode. The makefile will invoke emacs in batch mode and tangle the files for you.
+
+This dependency is temporary, pending the completion of a [[https://github.com/sabren/b4/tree/master/org][native org-bable-tangle implementation in pascal]].
 
 * Compiling and Running Minneron
 
